// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render the ExpenseSummary component 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totalling
     
    $1.00
    .
  </h1>
</div>
`;

exports[`Should render the ExpenseSummary with an empty input 1`] = `
<div>
  <h1>
    Viewing 
    0
     
    expenses
     totalling
     
    $0.00
    .
  </h1>
</div>
`;

exports[`Should render the filtered ExpenseSummary component 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling
     
    $1.95
    .
  </h1>
</div>
`;
